# CUDA

./: CMakeLists.txt  ImageConvolution  Makefile  testBig.sh  testSmall.sh
include/filters/: Filters.h  Solver.cuh
include/image/: Image.h
include/io/: Args.h  InputException.h  Reader.h  Writer.h
src/: main.cu
src/filters/: Solver.cu
src/image/: Image.cpp
src/io/: Args.cpp  InputException.cpp  Reader.cpp  Writer.cpp
